# registrable

./: README.md  registrable.py  setup.cfg  tests.py
registrable/: __init__.py  lazy.py  registrable.py  tests.py
