[metadata]
name = registrable
version = 0.0.1
author = Zhengping Jiang
author_email = zjiang31@jh.edu
description = A registrable configuration pacakage that is similar to allennlp Registrable
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >= 3.8
include_package_data = True
